--- a/Herkennen.html
+++ b/Herkennen.html
@@ -39,12 +39,11 @@
 		<section id="main">
 				<a href="competenties.html">Competenties</a> > Herkennen, Analyseren en Diagnosticeren
 				<h1>Herkennen, Analyseren en Diagnosticeren</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p>
+					<p><b>De student is in staat een vraagstuk op het gebied van Smart Industry te signaleren, te beschrijven, te analyseren en te beoordelen op wenselijkheid en haalbaarheid.</b></p>
+					<p>Tijdens de workshops die we in de eerste 6 weken gekregen hebben zijn we een aantal nieuwe werkwijze en technologieën voorgeschoteld gekregen. Werkwijze zoals Agile, Lean en Scrum zijn begrippen die ik wel al kenden maar nog nooit in verdiept had. Met de workshops van Smart start zijn we ook echt aan de slag gegaan met bijvoorbeeld Scrum en hoe je dit kan inzetten in een project. Daarnaast hebben we technologieën zoals Blockchain in een gastcollege gekregen, dit is weer een begrip waar je veel over hoort maar eigenlijk weet bijna niemand wat het echt betekend. Na de workshop ben ik instaat gesteld om een Blockchain werkwijze te herkennen en analyseren en wat Blockchain als toegevoegde waarde geeft in een project.</p>
+					<p>Een goed voorbeeld van deze competentie is het gastcollege van BeInformed bij Smart Business. Tijdens het gastcollege kregen we een opdracht rond een verzekeringsmaatschappij in India. Waarbij we eerste een BMC moesten maken van de huidige situatie en vervolgens een innovatie moesten bedenken om declaraties voor autoschade op een smart manier te doen. Innovaties hebben ook impact op een BMC en moesten we vervolgens aanpassen en een Business case er over schrijven zodat de veranderingen duidelijk worden omschreven en dus kon worden geschat of het haalbaar was.</p>
+					</p>
 			</section>
 			<aside id="sidebar">
 				<p>Herkennen, Analyseren en Diagnosticeren</p>
