--- a/Onderzoeken.html
+++ b/Onderzoeken.html
@@ -41,7 +41,7 @@
 				<h1>Onderzoeken</h1>
 				<p>
 					<p><b>De student is in staat in een multidisciplinaire omgeving methoden en technieken op het gebied van onderzoek te selecteren en toe te passen op een Smart Industry vraagstuk.</b></p>
-					<p>Tijdens het project hebben we desk en fieldresearch gedaan en dat is terug te vinden onder het kopje <a href="Smart Project.Html">project</a>.</p>
+					<p>Tijdens het project hebben we desk- en fieldresearch gedaan en dat is terug te vinden onder het kopje <a href="Smart Project.Html">project</a>.</p>
 					<p>Daarnaast heb ik natuurlijk voor de voorbereidingen en weekopdracht veel onderzoek gedaan om tot de juiste informatie en antwoorden te komen. Hierbij verwijs ik U naar <a href= "SS week 4.Html"> Smart Start week 4, voorbereiding en weekopdracht</a>. In deze opdracht heb ik alle aangeleerde methode van deskresearch gebruikt en heb ik naar mijn mening een erg interessant stuk geschreven over Agile en Lean bij de Lamborghini fabriek.</p>
 					</p>
 			</section>
