--- a/Projectmanagement.html
+++ b/Projectmanagement.html
@@ -44,7 +44,7 @@
 					<p>Roen Pulles, Automotive</p>
 					<p>Breyten Kouwenberg, Finance & Control</p>
 					<p>Thijs van Leerdam, Food & Business</p>
-				<p>	Zoals je ziet zijn we van 3 verschillende economisch disciplines. Dus veel kennis deelde we al met elkaar. Maar ikzelf heb me meer verdiept in HTML en CSS waarbij ik de rest van mijn projectgroep heb geholpen met deze twee disciplines. Daarnaast heeft Roen Breyten en ik weer geholpen met het ontwerpen van het bakje voor de IOT-oplossing omdat hij daar weer meer kennis van had.</p>
+				<p>	Zoals je ziet zijn we van 3 verschillende economisch disciplines. Dus veel kennis deelde we al met elkaar. Maar ik zelf heb me meer verdiept in HTML en CSS waarbij ik de rest van mijn projectgroep heb geholpen met deze twee disciplines. Daarnaast heeft Roen, Breyten en mijzelf weer geholpen met het ontwerpen van het bakje voor de IOT-oplossing omdat hij daar meer kennis van had.</p>
 					<p>Daarnaast heb ik bij de kookworkshop mijn kennis over koken die ik in mijn vrijetijd maar ook tijdens mijn bachelor heb opgebouwd proberen te delen met mijn projectgenoten. Roen en Breyten hadden allebei geen idee wat we moesten doen met de blinde doos ingrediënten die we gekregen hadden. Ik heb toen het voortouw genomen en een gang bedacht met de aanwezige producten. Hierin heb ik ze begeleid in de taken die ze moesten doen en dit heeft tot een uitstekend resultaat geleid.
 					De gang die we hebben gemaakt was:</p>
 					<p>Verse ravioli met een vulling van champignon en eekhoorntjesbrood met daarbij Gegrilde eendenborst met een rodewijn saus</p>
