--- a/SB week 6.html
+++ b/SB week 6.html
@@ -37,17 +37,16 @@
 
 	<div class="container">
 		<section id="main">
-				<a href="Smart Business.html">Smart Business</a> > Week 6
+				<a href="Smart Business.html">Smart Business</a> > Ervaring Smart Business
 			<h1>Smart Business</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<p>
+				<p>Tijdens Smart Business hebben we vooral veel gastcolleges en bedrijfsbezoeken gehad waarmee je veel leert van de ervaringen van anderen maar ook veel vanuit de praktijk. Ikzelf vind dit altijd veel fijner dan maar eindeloos in een klaslokaal te zitten en theorie voorgeschoteld te krijgen. </p>
+				<p>Tijdens de het gast college van Beinformed heb ik veel nieuwe inzichten gekregen in het BMC en een business case. Tijdens de verschillende bedrijfsbezoeken kon je goed zien hoe grote maar ook middelgrote bedrijven technologie inzetten om de bedrijfsvoering te verbeteren om zo meer klantwaarde te genereren. Smart Business is voor mijn bachelor het meest van belang geweest omdat ik bij mijn opleiding Food & Business vooral de traditionele manier van werken heb geleerd en er maar weinig aandacht werd geschonken aan nieuwe technologieën.</p>
+				<p>Verder vond ik het welk wat aan de laten kant gastcollege over Blockchain erg interessant. Blockchain is een begrip wat je veel tegen komt maar ik wist er zelf maar weinig vanaf. Maar Blockchain is als je bij een internationaal bedrijf terecht komt van groot belang en je zal er zelf waarschijnlijk niets van merken als je er meer werkt maar je zal er gegarandeerd mee werken. Daarom is het goed om toch de rode draad van de technologie erachter te weten en begrijpen. </p>
+				</p>
 		</section>
 		<aside id="sidebar">
-			<p>Smart Business Week 6 </p>
+			<p>Ervaring Smart Business</p>
 		</aside>
 	</div>
 
