--- a/SS week 6.html
+++ b/SS week 6.html
@@ -37,14 +37,13 @@
 
 	<div class="container">
 		<section id="main">
-				<a href="Smart Start.html">Smart Start</a> > Ervaring
+				<a href="Smart Start.html">Smart Start</a> > Ervaring Smart Start
 				<h1>Smart Start</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p>
+					<p>Tijdens Smart Start hebben we veel vrijheid gekregen in wat we gingen doen. Dat wil zeggen dat we in bepaalde kaders zelf mochten bedenken hoe we het als invulling gaven tijdens de workshops. De eerste paar weken hebben we vooral gefocust op Smart resource en open source. Ik heb hierbij geleerd om meer gebruik te maken van google scholar en hoe ik de wetenschappelijke artikelen die hierop staan te gebruiken en om er mee verder te bouwen. Hiervoor gebruikte ik eigenlijk vooral de normale google en een aantal databanken die relevant zijn aan mijn opleiding. Maar met google scholar heb je toch nog meer informatie en kan je gemakkelijk verwijzingen naar andere bronnen vinden waardoor er een soort sneeuwbal effect ontstaat waarbij je met één bron steeds meer bronnen kan verzamelen.</p>
+					<p>Daarnaast hebben we gewerkt volgens de Scrum methode waardoor ik ook realiseer dat dit een uitstekende projectmethode is waarmee veel structuur en motivatie te behalen is.</p>
+					<p>Wel moet ik ook eerlijk zijn, de vrijheid die we kregen in de workshops is fijn alleen kan het ook tot heel veel verwarring werken. Als je bijvoorbeeld een van de workshops mist dan kon je nergens terugzien wat er behandeld was, waardoor je mogelijk belangrijke informatie mist.</p>
+					</p>
 			</section>
 			<aside id="sidebar">
 				<p>Smart Start Ervaring </p>
