--- a/ST week 1.html
+++ b/ST week 1.html
@@ -42,7 +42,7 @@
 			<p>
 				<p><b>Internet og Things</b></p>
 				<p>
-					<p>Om het begrip Internet of Things beter te kunnen begrijpen en om er achter te komen hoe een IOT apparaat werkt zijn hebben we de opdracht gekregen om een IoT-schakeling te bouwen voor het automatiseren van de lichtintensiteit en aarde-vochtigheid van een plant.</p>
+					<p>Om het begrip Internet of Things beter te kunnen begrijpen en om er achter te komen hoe een IOT apparaat werkt hebben we de opdracht gekregen om een IoT-schakeling te bouwen voor het automatiseren van de lichtintensiteit en aarde-vochtigheid van een plant.</p>
 					<p>Dit gaat aan de hand van een ESP-32 die in verbinding gezet kan worden met verschillende componenten zoals een lichtsensor, vochtsensor en waterpomp. De ESP-32 wordt geladen met code die het mogelijk maakt dat de sensoren data afgeven waarmee de ESP-32 weer processen in gang zet.</p>
 					<p>De ESP-32 is verbonden met een app genaamd Blynk. Met de app kan je op een afstand de ESP-32 bedienen en verschillende gegevens over de vochtigheid, temperatuur en lichtintensiteit zien.</p>
 					</p>
