--- a/Samenwerken.html
+++ b/Samenwerken.html
@@ -44,7 +44,7 @@
 					<p><b>De student kan relaties en allianties binnen en buiten de eigen organisatie ontwikkelen en bestendigen en deze benutten voor het verkrijgen van informatie, steun en medewerking.</b></p>
 					<p>Tijdens het project had ik de rol van contactpersoon. In deze rol heb ik met Pim Deuling afgesproken om iedere twee weken een belafspraak te plannen om de stand van zaken te bespreken en eventueel vragen te stellen. Dit hebben we ook bijna iedere 2 weken gedaan.</p>
 					<p>Daarnaast zijn we met de gehele projectgroep naar Edo Biewinga van kwekerij Noorderbos in Tiendeveen geweest waar we een interview mee hebben gedaan en hem alle onderdelen van ons project verteld.
-					Verder hadden we een duidelijk taakverdeling binnen de projectgroep. Zoals ik al zij was ik het contactpersoon en de planner. In deze rol als Planner was ik verantwoordelijk het vaststellen van deadlines en als we een vergadering hadden. </p>
+					Verder hadden we een duidelijk taakverdeling binnen de projectgroep. Zoals ik al zei was ik het contactpersoon en de planner. In deze rol als Planner was ik verantwoordelijk het vaststellen van deadlines en als we een vergadering hadden. </p>
 					<p>Verder heb ik buiten de projectgroep in de klas een aantal keer hulp moeten vragen aan Glenn, Alfred en Guus, dit waren namelijk de enigste ICT’ers in de klas en zij hebben me een aantal keer verder kunnen helpen met onze technische kant van het project.</p>
 					
 			</section>
