--- a/SS week 5.html
+++ b/SS week 5.html
@@ -37,7 +37,7 @@
 
 	<div class="container">
 		<section id="main">
-				<a href="Smart Start.html">Smart Start</a> > platform business model
+				<a href="Smart Start.html">Smart Start</a> > Platform Business Model
 				<h1>Smart Start</h1>
 				<p><b>Voorbereiding Smart Start week 5</b></p>
 				<p>Het normale beeld van een winkelstraat, waarin er veel verschillende specifieke aanbieders te zien zijn, is steeds meer aan het veranderen. Tegenwoordig zie je geen grote warenhuizen zoals de V&D meer omdat online warenhuizen een goedkoper en beter aanbod kunnen realiseren dan fysieke warenhuizen. De winkelstraat van tegenwoordig is veel meer gericht op de ervaring van dingen. Een goed voorbeeld van een ‘Experience winkel’ is de M&M winkel in Amsterdam. In de M&M winkel kan je M&M’s kopen in alle kleuren van de regenboog. De winkel zelf heeft eigenlijk niet zo veel nut behalve publiciteit en om een ervaring te geven aan het merk. Het is dus ook geen winkel die gestuurd is op winst maken, wat ook niet nodig is voor een merk als M&M waar de verdienste uit andere bronnen komen. Maar ervaringen zijn toch steeds belangrijker aan het worden.</p>
