--- a/Smart Business.html
+++ b/Smart Business.html
@@ -39,7 +39,7 @@
 		<div class="container2">
 	
 		<h2>Smart Business</h2>
-		<p>Via de knoppen die hieronder kun je per week zien wat ik heb gedaan voor Smart Business </p>
+		<p>Via de knoppen die hieronder staan kun je zien wat ik heb gedaan voor Smart Business </p>
 	</div>
 		<div class="container3">
 		<div class="btn-group2">
@@ -50,7 +50,7 @@
 	<br>
 	<div class="btn-group2">
 			<a href="SB week 5.html" button class="button">Target Operating Model</button></a>
-			<a href="SB week 6.html" button class="button">Ervaring</button></a>
+			<a href="SB week 6.html" button class="button">Ervaring Smart Business</button></a>
 	</div>
 </div>
 
