--- a/Smart Start.html
+++ b/Smart Start.html
@@ -39,7 +39,7 @@
 		<div class="container2">
 	
 		<h2>Smart Start</h2>
-		<p>Via de knoppen die hieronder kun je per week zien wat ik heb gedaan voor Smart Start </p>
+		<p>Via de knoppen die hieronder staan kun u zien wat ik heb gedaan voor Smart Start </p>
 	</div>
 		<div class="container3">
 		<div class="btn-group2">
@@ -50,8 +50,8 @@
 	<br>
 	<div class="btn-group2">
 			<a href="SS week 4.html" button class="button">Agile en Lean</button></a>
-			<a href="SS week 5.html" button class="button">platform business model</button></a>
-			<a href="SS week 6.html" button class="button">Ervaring</button></a>
+			<a href="SS week 5.html" button class="button">Platform Business Model</button></a>
+			<a href="SS week 6.html" button class="button">Ervaring Smart Start</button></a>
 	</div>
 </div>
 
